[-->new] Added address APIs
